Update gitignore to exclude datasets folder

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,5 +1,4 @@
 en-om-mt-model/
-datasets/
 *.bin
 *.pt
 *.safetensors
@@ -13,3 +12,4 @@ __pycache__/
 data/
 processed_dataset/
 edenv/
+../datasets/
