--- a/server/.env
+++ b/server/.env
@@ -6,7 +6,7 @@ MONGODB_URI="mongodb+srv://NDC:wogesake@cluster0.6sdxs5n.mongodb.net/Ed-Platform
 JWT_SECRET=nasibodulachudo
 
 # Server
-PORT=5000
+PORT=https://cush-learn-node.onrender.com
 NODE_ENV=development
 
 # Frontend
